<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:layout_centerHorizontal="true"
    android:background="@color/white"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:keepScreenOn="false"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_white" />

    <TextView
        android:id="@+id/login_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="Account Login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/username"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/username_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:padding="5sp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/username_input_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Email is required"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/password"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/password_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:padding="5sp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/password_input_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_centerHorizontal="true"
        android:text="Password is required"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/password_input_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_style"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:fontFamily="@font/montserrat_regular"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_style"
        android:includeFontPadding="false"
        android:text="@string/signup"
        android:fontFamily="@font/montserrat_regular"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>